@@ -56,10 +56,52 @@ Bug fixes
  * Wagtail userbar is shown on pages that do not pass a ``page`` variable to the template (e.g. because they override the ``serve`` method)
  * ``request.site`` now set correctly on page preview when the page is not in the default site
  * Project template no longer raises a deprecation warning (Maximilian Stauss)
+ * ``PageManager.sibling_of(page)`` and ``PageManager.not_sibling_of(page)`` now default to inclusive (i.e. ``page`` is considered a sibling of itself), for consistency with other sibling methods
 
 
 Upgrade considerations
 ======================
+
+``PageManager.sibling_of(page)`` and ``PageManager.not_sibling_of(page)`` have changed behaviour
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+In previous versions of Wagtail, the ``sibling_of`` and ``not_sibling_of`` methods behaved inconsistently depending on whether they were called on a manager (e.g. ``Page.objects.sibling_of(some_page)`` or ``EventPage.objects.sibling_of(some_page)``) or a QuerySet (e.g. ``Page.objects.all().sibling_of(some_page)`` or ``EventPage.objects.live().sibling_of(some_page)``).
+
+Previously, the manager methods behaved as *exclusive* by default; that is, they did not count the passed-in page object as a sibling of itself:
+
+.. code-block:: python
+
+    >>> event_1 = EventPage.objects.get(title='Event 1')
+    >>> EventPage.objects.sibling_of(event_1)
+    [<EventPage: Event 2>]  # OLD behaviour: Event 1 is not considered a sibling of itself
+
+
+This has now been changed to be *inclusive* by default; that is, the page is counted as a sibling of itself:
+
+.. code-block:: python
+
+    >>> event_1 = EventPage.objects.get(title='Event 1')
+    >>> EventPage.objects.sibling_of(event_1)
+    [<EventPage: Event 1>, <EventPage: Event 2>]  # NEW behaviour: Event 1 is considered a sibling of itself
+
+
+If the call to ``sibling_of`` or ``not_sibling_of`` is chained after another QuerySet method - such as ``all()``, ``filter()`` or ``live()`` - behaviour is unchanged; this behaves as *inclusive*, as it did in previous versions:
+
+.. code-block:: python
+
+    >>> event_1 = EventPage.objects.get(title='Event 1')
+    >>> EventPage.objects.all().sibling_of(event_1)
+    [<EventPage: Event 1>, <EventPage: Event 2>]  # OLD and NEW behaviour
+
+
+If your project includes queries that rely on the old (exclusive) behaviour, this behaviour can be restored by adding the keyword argument ``inclusive=False``:
+
+.. code-block:: python
+
+    >>> event_1 = EventPage.objects.get(title='Event 1')
+    >>> EventPage.objects.sibling_of(event_1, inclusive=False)
+    [<EventPage: Event 2>]  # passing inclusive=False restores the OLD behaviour
+
 
 ``Image.search`` and ``Document.search`` methods are deprecated
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
